What's new in ArPHP 4.0 (release date: Aug ##, 2014)
-----------------------------------------------------

(*) Convert from and to Arabizi!

(*) Add "getLanguage" method to the "CharsetD" sub class.

(*) Improve "isForum" method by support detecting more forum applications.

(*) Use "SVN: <svn_id>" in the version documentation tag.

(*) Rewrite "KeySwap" sub class to move data out of the code and support French keyboard.

(*) Add "Sort" sub class.

* Deprecate "CharsetC" sub class and use "iconv" function to convert charset encoding internally.

* Check and fix warnings of the PEAR coding standard.

* Fix the compatibility issues with PHP 5.3, 5.4, and 5.5 reported by PHP_CodeSniffer using 
  PHPCompatibility standards.

* Fix the "money2str" method in the "Numbers" sub class to omit print money units when basic 
  or fraction value is zero. Thanks to Abdulmajeed Alharbi <abosami2000@gmail.com>.

* Fix "CompressStr" sub class bug related to implement charset encoding conversion on binary 
  input/output arguments in the "compress", "decompress", "search", and "length" methods. 


What's new in ArPHP 3.6.0 (release date: Jan 20, 2013)
-----------------------------------------------------

* Implement more accurate algorithm to convert from/to Hijri calendar (published in
  the Islamic Crescents' Observation Project <http://www.icoproject.org>) in both "Mktime" 
  and "Date" sub classes, thanks to Mohammed Al-Shehri <moh.alshehri@gmail.com>.
  
* Extend the "Numbers" sub class functionality by add "money2str" method to spell 
  provided price in Arabic idiom by define value, Arabic currency ISO code, and
  language. Thanks to <msme@arabteam2000-forum.com> who developed the first draft.

* Add "str2int" method to the "Numbers" sub class to convert Arabic string back into integer,
  (output limits are +/- 2.15e+9 on 32-bit platforms and +/- 9.22e+18 on 64-bit platforms).

* Add one more method to the "Mktime" sub class called "hijriMonthDays" returns how many